feat: complete MVP (Epics 3-5) - document monitoring, maintenance logic, traffic-light dashboard, and incident reporting